# VMOnSTM32

./: .gitignore  .gitmodules  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: arithmetic.rs  cpu.rs  executor.rs  machine.rs  main.rs  memory.rs  protocol.rs  serial.rs  vmerror.rs
src/instruction/: arm.rs  mod.rs  thumb.rs  thumb2.rs
tests/: build.py
tests/executor/: adc_mvn.s  add_sub.s  and.s  asr.s  bfc.s  bfi.s  bic.s  bl_blx.s  clz.s  eor.s  ldr_str.s  lsl_lsr.s  mla.s  mul.s  push_stm_pop_ldm.s  qadd_x.s
virtual/: command.py  main.py  memory.py  state.py
