[package]
name = "vm_on_stm32"
version = "0.1.0"
edition = "2024"

[profile.dev]
overflow-checks = false

[dependencies]
bitfield = "0.19.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
linked_list_allocator = "0.10.5"
nb = "1.1.0"
stm32h7 = { version = "0.16.0", features = ["stm32h723", "rt"] }

[dependencies.bitvec]
version = "1.0.1"
default-features = false
features = ["atomic","alloc"]

[dependencies.yaxpeax-arm]
version = "0.4.0"
default-features = false

[dependencies.yaxpeax-arch]
version = "0.3.2"
default-features = false
